--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -49,7 +49,7 @@ aside{
 		justify-content: center;
 		align-items: center;
 		font-size: $textLg;
-		border: map-get($map: $paleta, $key: 'black') solid 5px;
+		border: map-get($map: $paleta, $key: 'secondaryColor') solid 5px;
 		background-color: map-get($map: $paleta, $key: 'mainColor');
         div{
             ul{
@@ -63,8 +63,7 @@ aside{
         }
     }
     @include media (tablet){
-        border-top: map-get($map: $paleta, $key: 'black') solid 5px;
-        border-right: map-get($map: $paleta, $key: 'black') solid 5px;
+        border-top: none;
     }
 }
 
