--- a/scss/_formulario.scss
+++ b/scss/_formulario.scss
@@ -5,7 +5,6 @@
         padding: 1rem;
         @include media (mobile){
             flex-direction: column;
-            overflow: hidden;
         }
 
         @include media (desktop){
@@ -22,6 +21,9 @@
     }
     legend{
         font-size: $textMd;
+    }
+    .formulario__uno{
+        padding-top: 1rem;
     }
     .email{
         margin-bottom: 2rem;
