--- a/css/main.css
+++ b/css/main.css
@@ -434,7 +434,7 @@ header {
 }
 
 main {
-  background-image: url(../img/carretera.jpg);
+  background-image: url(../img/carretera.webp);
   background-color: rgb(50, 50, 50);
   background-blend-mode: soft-light;
   background-repeat: no-repeat;
