--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -80,7 +80,7 @@ header{
 }
 
 main{
-    background-image: url(../img/carretera.jpg);
+    background-image: url(../img/carretera.webp);
 	background-color:$softColor;
 	background-blend-mode: soft-light;
 	background-repeat: no-repeat;
